fix(HomePage.js): fix newsletter input space and rounded border on safari

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -117,8 +117,8 @@ main .articles{
     width: 0;
     margin: 0 10px;
     background: #000;
-    top: -7px;
-    position: relative;
+    bottom: 7px;
+    position: absolute;
     transition: all 0.3s ease;
 }
 
